# redu-thesis-2

./: .gitignore  guidelines.md  main.typ
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/cpp/: CMakeLists.txt  redu_llama_jni.cpp
android-app/app/src/main/cpp/llama.cpp/: .gitignore
android-app/app/src/main/cpp/llama.cpp/ggml/src/ggml-webgpu/wgsl-shaders/: common_decls.tmpl  cpy.wgsl
android-app/app/src/main/cpp/llama.cpp/src/: llama.cpp
android-app/app/src/main/cpp/llama.cpp/src/models/: deepseek2ocr.cpp  glm-dsa.cpp  granite-moe.cpp  jina-bert-v2.cpp  jina-bert-v3.cpp  lfm2moe.cpp  mamba2.cpp  minicpm.cpp  nomic-bert-moe.cpp  nomic-bert.cpp  phimoe.cpp
android-app/app/src/main/cpp/llama.cpp/tools/mtmd/debug/: mtmd-debug.cpp
android-app/models/: README.md
chapters/: 01_title_page.typ  02_copyright.typ  03_approval.typ  04_acknowledgment.typ  05_chapter1.typ  06_chapter2.typ  07_chapter3.typ  08_chapter4.typ  08_references.bib  09_appendices.typ  09_chapter5.typ  10_chapter6.typ  utils.typ
expert-review/: filipino_mvl_expert_system_primer.md  filipino_stop_words_neutrality_approval.md  mvl_filipino_expert_rating_instructions.md  mvl_filipino_expert_rating_sheet.csv
scripts/: analyze_simulated_export.py  generate_redu_simulated_export.py
simulated-export/redu-p01-p50-20260523-220929/: daily_summaries.csv  risk_personalization.csv  sessions.csv
simulated-export/redu-p01-p50-20260523-224114/: doomscrolling_scale.csv  open_ended_feedback.csv  reliability_events.csv  sme_evaluation.csv  (+4 more)
(+87 files in other folders)
